prizrakcluster/infrastructure/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 67
              protocol: UDP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pihole-data
              mountPath: /etc/pihole
            - name: dnsmasq-data
              mountPath: /etc/dnsmasq.d
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
      volumes:
        - name: pihole-data
          persistentVolumeClaim:
            claimName: config-pvc
        - name: dnsmasq-data
          persistentVolumeClaim:
            claimName: dnsmasq-pvc
