prizrakcluster/infrastructure/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  ports:
    - port: 53
      protocol: TCP
      targetPort: 53
    - port: 53
      protocol: UDP
      targetPort: 53
    - port: 67
      protocol: UDP
      targetPort: 67
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: pihole
  type: ClusterIP
