prizrakcluster/infrastructure/pihole/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ext-dns-udp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "DNS"
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.1.13
    - 192.168.1.14
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
  selector:
    app: pihole
---
apiVersion: v1
kind: Service
metadata:
  name: ext-dns-tcp
  namespace: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: "DNS"
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.1.13
    - 192.168.1.14
  ports:
    - port: 53
      targetPort: 53
      protocol: TCP
  selector:
    app: pihole
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations: 
    nginx.ingress.kubernetes.io/auth-url: |-
        http://ak-outpost-embedded.authentik.svc.cluster.local:9000/outpost.goauthentik.io/auth/nginx
    # If you're using domain-level auth, use the authentication URL instead of the application URL
    nginx.ingress.kubernetes.io/auth-signin: |-
        https://dns.prizrak.me/outpost.goauthentik.io/start?rd=$scheme://$http_host$escaped_request_uri
    nginx.ingress.kubernetes.io/auth-response-headers: |-
        Set-Cookie,X-authentik-username,X-authentik-groups,X-authentik-email,X-authentik-name,X-authentik-uid
    nginx.ingress.kubernetes.io/auth-snippet: |
        proxy_set_header X-Forwarded-Host $http_host;
spec:
  ingressClassName: nginx
  rules:
  - host: dns.prizrak.me
    http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pihole
            port:
              number: 80
